# LSASampleCode

./: .gitignore  00 Totally Optional HMIS Table Indexes.sql  01 Temp Reporting and Reference Tables.sql  02 LSA Output Tables.sql  pyproject.toml
lsa_dbt/: README.md  dbt_project.yml  example_profiles.yml
lsa_dbt/macros/: convert_column_names_to_snake_case.sql  snake_case.sql
lsa_dbt/models/csv_export/: seeds.yml
lsa_dbt/models/hmis_csv/: sources.yml
lsa_dbt/models/lsa/: _properties.yml  lsa_project.sql  lsa_report.sql
lsa_dbt/models/lsa/staging/: lsa_project.sql  lsa_report.sql  properties.yml  sources.yml
lsa_dbt/models/lsa/staging/hmis_csv/: affilitation.sql
lsa_dbt/models/lsa/staging/hmis_csv_snakecase_views/: affiliation.sql  assessment.sql  assessment_questions.sql  assessment_results.sql  (+20 more)
lsa_dbt/models/seeds/csv_export/: seeds.yml
lsa_dbt/models/seeds/lsa_raw_hmis_csv/: seeds.yml
lsa_dbt/models/seeds/lsa_references/: seeds.yml
lsa_dbt/models/staging/hmis_csv_snakecase/: _properties.yml  affiliation.sql  assessment.sql  assessment_questions.sql  assessment_results.sql  ce_participation.sql  client.sql  current_living_situation.sql  disabilities.sql  employment_education.sql  enrollment.sql  event.sql  exit.sql  export.sql  funder.sql  health_and_dv.sql  hmis_participation.sql  income_benefits.sql  inventory.sql  organization.sql  project.sql  project_co_c.sql  services.sql  user.sql  youth_education_status.sql
lsa_dbt/models/staging/lsa_raw_hmis_csv/: sources.yml
lsa_dbt/seeds/: ref_PopHHTypes.csv  ref_RowPopulations.csv  ref_row_values.csv
