[tool.poetry]
name = "lsasamplecode"
version = "0.0.1"
description = "A collection of experiments based on the official Abt HMIS LSA Sample Code."
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = "^25.30.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
